--- a/blog.html
+++ b/blog.html
@@ -291,16 +291,34 @@
 					<div class="container small">
 						<div class="text-center js-scrollanim">
 							<h2 class="headline-l">
-								<span class="anim-text-double-fill invert" data-text="Fresh">Fresh</span>
-								<span class="anim-text-double-fill invert tr-delay-02" data-text="Topics">Topics</span>
+								<span class="anim-text-double-fill invert" data-text="Three Essential Digital Marketing">Three Essential Digital Marketing</span>
+								<span class="anim-text-double-fill invert tr-delay-02" data-text="Channels In 2020">Channels In 2020</span>
 							</h2>
-							<p class="subhead-xs text-color-b0b0b0 margin-top-20 anim-fade tr-delay-03">Cloud bread cardigan messenger bag raw denim swag drinking vinegar. Yuccie jianbing bespoke retro, photo booth salvia. Helvetica hella vexillologist, prism lo-fi activated charcoal iPhone thundercats irony meggings meh cardigan chartreuse.</p>
+							<br><br>
+							<h3 class="headline-xxxs">
+								<ul class="list list_center list_row list_margin-30px">
+									<li class="list__item">
+										<span class="anim-text-double-fill invert" data-text="By: Abdul Wasith">
+											<a href="#" class="subhead-xxxs text-color-8a8a8a text-hover-to-red js-pointer-small">By: Abdul Wasith</a>
+										</span>
+									</li>
+									<li class="list__item">
+										<span class="anim-text-double-fill invert" data-text="18 September 2020">
+											<a href="#" class="subhead-xxxs text-color-8a8a8a text-hover-to-red js-pointer-small">18 September 2020</a>
+										</span>
+									</li>
+								</ul>
+							</h3>
+							<br><br>
+							<p class="subhead-xs text-color-b0b0b0 margin-top-20 anim-fade tr-delay-03">2020 has been a challenging year for marketing professionals and agencies would be an understatement. While some companies and industries are affected more than that, every marketer needs to take a step back and reevaluate their marketing strategies to adapt to a suddenly changed landscape.
+								<br><br>
+							Many companies have taken this opportunity to jump on to the newest platforms and marketing channels to engage with their audiences in entirely new ways. There are certainly good reasons to test different and new communication channels, but when you reassess your marketing ideas, don't ignore some of the more tried-and-true digital marketing strategies that already have a track record of success.</p>
 						</div>
 
 						<!-- blog-entry start -->
 						<article class="flex-container flex-align-center padding-top-60">
 							<div class="six-columns padding-top-30">
-								<a href="post_dont-panic.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
+								<a href="#" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
 											<img class="img-hover-scale" src="assets/images/posts/modern-design/photo-of-man-jumping-on-pavement-3329728-2.jpg" alt="Post">
@@ -310,7 +328,7 @@
 							</div>
 							<div class="six-columns padding-top-30">
 								<div class="column-l-margin-40 anim-fade js-scrollanim">
-									<ul class="list list_row list_margin-30px">
+									<!-- <ul class="list list_row list_margin-30px">
 										<li class="list__item">
 											<a href="#" class="subhead-xxs text-color-8a8a8a text-hover-to-red js-pointer-small">By: Nancy Newton</a>
 										</li>
@@ -320,17 +338,22 @@
 										<li class="list__item">
 											<a href="#" class="subhead-xxs text-color-8a8a8a text-hover-to-red js-pointer-small">2020, March 23</a>
 										</li>
-									</ul>
-									<a href="post_dont-panic.html" class="margin-top-bottom-30 d-block js-pointer-large js-animsition-link">
-										<h3 class="headline-xxxs">Modern architecture and<br>design society</h3>
-										<p class="body-text-xs margin-top-20">Plaid retro migas venmo lo-fi ethical artisan fingerstache seitan you probably haven't heard of them fam keffiyeh...</p>
+									</ul> -->
+									<a href="#" class="margin-top-bottom-10 d-block js-pointer-large js-animsition-link">
+										<h3 class="headline-xs">
+											<span class="anim-text-double-fill invert tr-delay-02" data-text="EMAIL">EMAIL</span>
+										</h3>
+										<p class="body-text-xs margin-top-20">When it comes to digital marketing, email is the core of the industry. But, like wine or whiskey, email marketing keeps getting better with Era. Today, email can adapt to accommodate the device when a recipient uses to access their Mail, from a smartphone with a touchscreen to a desktop with a mouse and everything. Messages can focus on text or become as interactive as a website.
+											<br><br>
+											If you havent already using email marketing, this is the perfect time for you to start incorporating it into your marketing Plan. If email Marketing is already a part of your strategy, this is a good time to re-evaluate how you're using the Platform and look for more opportunities to incorporate it and drive better results. we're seeing an increase in overall email marketing activity across world in many industries. With so many more people working from home, at least temporarily, email can be even more effective at driving results.
+										</p>
 									</a>
-									<a href="post_dont-panic.html" class="skew-btn js-pointer-large js-animsition-link">
+									<!-- <a href="post_dont-panic.html" class="skew-btn js-pointer-large js-animsition-link">
 										<span class="skew-btn__box">
 											<span class="skew-btn__content">Continue reading</span>
 											<span class="skew-btn__arrow"></span>
 										</span>
-									</a>
+									</a> -->
 								</div>
 							</div>
 						</article><!-- blog-entry end -->
@@ -339,7 +362,7 @@
 						<article class="flex-container reverse flex-align-center padding-top-60">
 							<div class="six-columns padding-top-30">
 								<div class="column-r-margin-40 anim-fade js-scrollanim">
-									<ul class="list list_row list_margin-30px">
+									<!-- <ul class="list list_row list_margin-30px">
 										<li class="list__item">
 											<a href="#" class="subhead-xxs text-color-8a8a8a text-hover-to-red js-pointer-small">By: Nick Hufnagel</a>
 										</li>
@@ -349,17 +372,21 @@
 										<li class="list__item">
 											<a href="#" class="subhead-xxs text-color-8a8a8a text-hover-to-red js-pointer-small">2020, April 7</a>
 										</li>
-									</ul>
-									<a href="post_dont-panic.html" class="margin-top-bottom-30 d-block js-pointer-large js-animsition-link">
-										<h3 class="headline-xxxs">Home recording studio<br>interior design</h3>
-										<p class="body-text-xs margin-top-20">Plaid retro migas venmo lo-fi ethical artisan fingerstache seitan you probably haven't heard of them fam keffiyeh...</p>
+									</ul> -->
+									<a href="#" class="margin-top-bottom-10 d-block js-pointer-large js-animsition-link">
+										<h3 class="headline-xs">
+											<span class="anim-text-double-fill invert tr-delay-02" data-text="SMM">SMM</span>
+										</h3>
+										<p class="body-text-xs margin-top-20">Similar to email, SMM (Social Media Marketing) marketing isn't exactly the new kid on the block. It has been a daily life for most consumers since they bought their first cell phone. While we think of SMM as a way to send out your Brand Identity and Build your Brand Using Social Media Platforms.
+											<br><br>
+											However, SMM marketing can be challenging, and like email, requires strict compliance with a set of regulations. The channel itself is also more restrictive than most marketing channels,.</p>
 									</a>
-									<a href="post_dont-panic.html" class="skew-btn js-pointer-large js-animsition-link">
+									<!-- <a href="post_dont-panic.html" class="skew-btn js-pointer-large js-animsition-link">
 										<span class="skew-btn__box">
 											<span class="skew-btn__content">Continue reading</span>
 											<span class="skew-btn__arrow"></span>
 										</span>
-									</a>
+									</a> -->
 								</div>
 							</div>
 							<div class="six-columns padding-top-30">
@@ -375,8 +402,8 @@
 
 						<!-- blog-entry start -->
 						<article class="flex-container flex-align-center padding-top-60">
-							<div class="six-columns padding-top-30">
-								<a href="post_dont-panic.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
+							<div class="six-columns padding-top-10">
+								<a href="#" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
 											<img class="img-hover-scale" src="assets/images/posts/photo-studio/black-sony-dslr-camera-with-telephoto-lens-and-tripod-1447264.jpg" alt="Post">
@@ -386,7 +413,7 @@
 							</div>
 							<div class="six-columns padding-top-30">
 								<div class="column-l-margin-40 anim-fade js-scrollanim">
-									<ul class="list list_row list_margin-30px">
+									<!-- <ul class="list list_row list_margin-30px">
 										<li class="list__item">
 											<a href="#" class="subhead-xxs text-color-8a8a8a text-hover-to-red js-pointer-small">By: Jeffery Reder</a>
 										</li>
@@ -396,96 +423,30 @@
 										<li class="list__item">
 											<a href="#" class="subhead-xxs text-color-8a8a8a text-hover-to-red js-pointer-small">2020, April 12</a>
 										</li>
-									</ul>
-									<a href="post_dont-panic.html" class="margin-top-bottom-30 d-block js-pointer-large js-animsition-link">
-										<h3 class="headline-xxxs">Second hand photography<br>studio equipment</h3>
-										<p class="body-text-xs margin-top-20">Plaid retro migas venmo lo-fi ethical artisan fingerstache seitan you probably haven't heard of them fam keffiyeh...</p>
+									</ul> -->
+									<a href="#" class="margin-top-bottom-10 d-block js-pointer-large js-animsition-link">
+										<h3 class="headline-xs">
+											<span class="anim-text-double-fill invert tr-delay-02" data-text="VIDEO">VIDEO</span>
+										</h3>
+										<p class="body-text-xs margin-top-20">
+											Ever since the first motion picture, people have loved watching video content. With the advent of 4G, LTE and now 5G in mobile, and high-speed broadband running into so many homes and businesses, delivering video content suddenly became a fast and simple process. With that easy access came an explosion of video content for consumers to download or stream on whatever device they have at hand. Today, video marketing is a booming communication channel, with companies creating all kinds of content for their customers and prospects.
+											<br><br>
+											While the best quality video still requires higher-end equipment, it is now possible for virtually anyone to record comparatively good quality video on the smartphone in their pockets. This has given marketers the ability to get very creative with video content, without a significant financial investment. It's a far cry from the days where only bigger brands might be able to afford to shoot and leverage TV with commercials.
+											<br><br>
+											Video is also incredibly versatile when it comes to developing creative content. In 2020, with social distancing and work-from-home becoming the norm, video can provide a way to deliver more personal messages, while face-to-face interactions are limited. Whether that is recording videos of your company's team members in their home offices or leveraging user-generated content around product reviews, video can help bridge the gap and make a more personal connection with your audience. Once you have video content, it is easy to incorporate it into your other marketing channels, like email and social, expanding its impact.
+											<br><br>
+											There are many other marketing channels you should employ in your overall marketing strategy, but make sure you consider each of these as you continue to adjust your overall marketing plan for the remainder of this year and beyond.</p>
 									</a>
-									<a href="post_dont-panic.html" class="skew-btn js-pointer-large js-animsition-link">
+									<!-- <a href="#" class="skew-btn js-pointer-large js-animsition-link">
 										<span class="skew-btn__box">
 											<span class="skew-btn__content">Continue reading</span>
 											<span class="skew-btn__arrow"></span>
 										</span>
-									</a>
+									</a> -->
 								</div>
 							</div>
 						</article><!-- blog-entry end -->
 
-						<!-- blog-entry start -->
-						<article class="flex-container reverse flex-align-center padding-top-60">
-							<div class="six-columns padding-top-30">
-								<div class="column-r-margin-40 anim-fade js-scrollanim">
-									<ul class="list list_row list_margin-30px">
-										<li class="list__item">
-											<a href="#" class="subhead-xxs text-color-8a8a8a text-hover-to-red js-pointer-small">By: Jeffery Reder</a>
-										</li>
-										<li class="list__item">
-											<a href="#" class="subhead-xxs text-color-8a8a8a text-hover-to-red js-pointer-small">In: Art</a>
-										</li>
-										<li class="list__item">
-											<a href="#" class="subhead-xxs text-color-8a8a8a text-hover-to-red js-pointer-small">2020, April 29</a>
-										</li>
-									</ul>
-									<a href="post_dont-panic.html" class="margin-top-bottom-30 d-block js-pointer-large js-animsition-link">
-										<h3 class="headline-xxxs">Colorful eyeshadow<br>makeup tutorial</h3>
-										<p class="body-text-xs margin-top-20">Plaid retro migas venmo lo-fi ethical artisan fingerstache seitan you probably haven't heard of them fam keffiyeh...</p>
-									</a>
-									<a href="post_dont-panic.html" class="skew-btn js-pointer-large js-animsition-link">
-										<span class="skew-btn__box">
-											<span class="skew-btn__content">Continue reading</span>
-											<span class="skew-btn__arrow"></span>
-										</span>
-									</a>
-								</div>
-							</div>
-							<div class="six-columns padding-top-30">
-								<a href="post_dont-panic.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
-									<div class="anim-img-reveal__hidden">
-										<div class="anim-img-reveal__scale">
-											<img class="img-hover-scale" src="assets/images/posts/colorful-eyeshadows/woman-wearing-costume-2712940-2.jpg" alt="Post">
-										</div>
-									</div>
-								</a>
-							</div>
-						</article><!-- blog-entry end -->
-
-						<!-- blog-entry start -->
-						<article class="flex-container flex-align-center padding-top-60">
-							<div class="six-columns padding-top-30">
-								<a href="post_dont-panic.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
-									<div class="anim-img-reveal__hidden">
-										<div class="anim-img-reveal__scale">
-											<img class="img-hover-scale" src="assets/images/posts/insomnia/photo-of-food-in-a-bowl-3296546.jpg" alt="Post">
-										</div>
-									</div>
-								</a>
-							</div>
-							<div class="six-columns padding-top-30">
-								<div class="column-l-margin-40 anim-fade js-scrollanim">
-									<ul class="list list_row list_margin-30px">
-										<li class="list__item">
-											<a href="#" class="subhead-xxs text-color-8a8a8a text-hover-to-red js-pointer-small">By: Nick Hufnagel</a>
-										</li>
-										<li class="list__item">
-											<a href="#" class="subhead-xxs text-color-8a8a8a text-hover-to-red js-pointer-small">In: Culture</a>
-										</li>
-										<li class="list__item">
-											<a href="#" class="subhead-xxs text-color-8a8a8a text-hover-to-red js-pointer-small">2020, April 30</a>
-										</li>
-									</ul>
-									<a href="post_dont-panic.html" class="margin-top-bottom-30 d-block js-pointer-large js-animsition-link">
-										<h3 class="headline-xxxs">Insomnia symptoms<br>causes and treatment</h3>
-										<p class="body-text-xs margin-top-20">Plaid retro migas venmo lo-fi ethical artisan fingerstache seitan you probably haven't heard of them fam keffiyeh...</p>
-									</a>
-									<a href="post_dont-panic.html" class="skew-btn js-pointer-large js-animsition-link">
-										<span class="skew-btn__box">
-											<span class="skew-btn__content">Continue reading</span>
-											<span class="skew-btn__arrow"></span>
-										</span>
-									</a>
-								</div>
-							</div>
-						</article><!-- blog-entry end -->
 					</div><!-- container end -->
 				</div><!-- pos-rel end -->
 			</section><!-- fresh topics end -->
