--- a/index.html
+++ b/index.html
@@ -1304,7 +1304,7 @@
 						<!-- blog-entry start -->
 						<article class="flex-container flex-align-center padding-top-60">
 							<div class="six-columns padding-top-30">
-								<a href="post_dont-panic.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
+								<a href="blog.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
 											<img class="img-hover-scale" src="assets/images/posts/decor-and-furniture/two-vases-on-table-842950.jpg" alt="Post">
@@ -1316,23 +1316,24 @@
 								<div class="column-l-margin-40 anim-fade js-scrollanim">
 									<ul class="list list_row list_margin-30px">
 										<li class="list__item">
-											<a href="#" class="subhead-xxs text-color-888888 text-hover-to-red js-pointer-small">By: Nancy Newton</a>
+											<a href="#" class="subhead-xs text-color-888888 text-hover-to-red js-pointer-small">By: Abdul Wasith</a>
 										</li>
-										<li class="list__item">
+										<!-- <li class="list__item">
 											<a href="#" class="subhead-xxs text-color-888888 text-hover-to-red js-pointer-small">In: Art</a>
-										</li>
+										</li> -->
 										<li class="list__item">
-											<a href="#" class="subhead-xxs text-color-888888 text-hover-to-red js-pointer-small">2020, March 2</a>
+											<a href="#" class="subhead-xs text-color-888888 text-hover-to-red js-pointer-small">18 September 2020</a>
 										</li>
 									</ul>
 									<a href="post_dont-panic.html" class="margin-top-bottom-30 d-block js-pointer-large js-animsition-link">
-										<h3 class="headline-xxxs text-color-black">
-											Home decor and furniture<br>
-											stores near me
+										<h3 class="headline-xs text-color-black">
+											Three Essential Digital Marketing<br>
+											Channels In 2020
 										</h3>
-										<p class="body-text-xs margin-top-20 text-color-black">Plaid retro migas venmo lo-fi ethical artisan fingerstache seitan you probably haven't heard of them fam keffiyeh...</p>
+										<p class="body-text-s margin-top-20 text-color-black">
+											2020 has been a challenging year for marketing professionals and agencies would be an understatement. While some companies and industries are affected more than that, every marketer...</p>
 									</a>
-									<a href="post_dont-panic.html" class="skew-btn js-pointer-large js-animsition-link">
+									<a href="blog.html" class="skew-btn js-pointer-large js-animsition-link">
 										<span class="skew-btn__box">
 											<span class="skew-btn__content text-color-black">Continue reading</span>
 											<span class="skew-btn__arrow black"></span>
@@ -1343,7 +1344,7 @@
 						</article><!-- blog-entry end -->
 
 						<!-- blog-entry start -->
-						<article class="flex-container reverse flex-align-center padding-top-60">
+						<!-- <article class="flex-container reverse flex-align-center padding-top-60">
 							<div class="six-columns padding-top-30">
 								<div class="column-r-margin-40 anim-fade js-scrollanim">
 									<ul class="list list_row list_margin-30px">
@@ -1381,10 +1382,10 @@
 									</div>
 								</a>
 							</div>
-						</article><!-- blog-entry end -->
+						</article><!-- blog-entry end --> -->
 
 						<!-- blog-entry start -->
-						<article class="flex-container flex-align-center padding-top-60">
+						<!-- <article class="flex-container flex-align-center padding-top-60">
 							<div class="six-columns padding-top-30">
 								<a href="post_dont-panic.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
@@ -1422,7 +1423,7 @@
 									</a>
 								</div>
 							</div>
-						</article><!-- blog-entry end -->
+						</article><!-- blog-entry end --> -->
 					</div><!-- container end -->
 				</div><!-- pos-rel end -->
 			</section><!-- latest news end -->
